--- a/feature-assets/src/main/res/layout/fragment_extrinsic_details.xml
+++ b/feature-assets/src/main/res/layout/fragment_extrinsic_details.xml
@@ -54,9 +54,9 @@
                 android:gravity="center_vertical"
                 tools:drawablePadding="4dp"
                 tools:drawableStart="@drawable/ic_checkmark_circle_16"
-                tools:drawableTint="@color/green"
+                tools:drawableTint="@color/icon_positive"
                 tools:text="completed"
-                tools:textColor="@color/green" />
+                tools:textColor="@color/text_positive" />
 
             <io.novafoundation.nova.common.view.TableView
                 android:layout_width="match_parent"
