--- a/feature-staking-impl/src/main/res/layout/view_payout_target.xml
+++ b/feature-staking-impl/src/main/res/layout/view_payout_target.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
-        android:textColor="@color/green"
+        android:textColor="@color/icon_positive"
         android:layout_marginBottom="11dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/payoutTargetName"
