--- a/feature-wallet-api/src/main/res/layout/view_choose_amount_input.xml
+++ b/feature-wallet-api/src/main/res/layout/view_choose_amount_input.xml
@@ -15,11 +15,12 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/bg_icon_round_black"
+        android:background="@drawable/bg_token_container"
         android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/icon_primary"
         tools:src="@drawable/ic_token_ksm" />
 
     <TextView
@@ -29,11 +30,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:includeFontPadding="false"
+        android:textColor="@color/text_primary"
         app:layout_constraintBottom_toBottomOf="@+id/chooseAmountInputImage"
         app:layout_constraintStart_toEndOf="@id/chooseAmountInputImage"
         app:layout_constraintTop_toTopOf="@+id/chooseAmountInputImage"
         tools:text="KSM" />
-
 
     <EditText
         android:id="@+id/chooseAmountInputField"
@@ -49,7 +50,7 @@
         android:inputType="numberDecimal"
         android:paddingBottom="26dp"
         android:textColor="@color/text_primary"
-        android:textColorHint="@color/white_32"
+        android:textColorHint="@color/hint_text"
         android:textCursorDrawable="@null"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
