--- a/common/src/main/res/layout/bottom_sheet_dynamic_list.xml
+++ b/common/src/main/res/layout/bottom_sheet_dynamic_list.xml
@@ -30,6 +30,7 @@
             android:layout_marginTop="13dp"
             android:layout_marginBottom="13dp"
             android:layout_weight="1"
+            android:textColor="@color/text_primary"
             tools:text="Title" />
 
         <ImageView
