--- a/common/src/main/res/layout/view_labeled_text.xml
+++ b/common/src/main/res/layout/view_labeled_text.xml
@@ -36,7 +36,7 @@
         app:layout_goneMarginStart="16dp"
         android:layout_marginTop="8dp"
         android:includeFontPadding="false"
-        android:textColor="@color/text_secondary"
+        android:textColor="@color/text_primary"
         app:layout_constraintEnd_toStartOf="@id/labeledTextAction"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@id/labeledTextPrimaryIcon"
@@ -56,7 +56,7 @@
         android:ellipsize="middle"
         android:includeFontPadding="false"
         android:singleLine="true"
-        android:textColor="@color/text_primary"
+        android:textColor="@color/text_secondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/labeledTextAction"
         app:layout_constraintHorizontal_bias="0.0"
@@ -81,6 +81,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/ic_copy"
-        app:tint="@color/icon_primary" />
+        app:tint="@color/icon_secondary" />
 
 </merge>
