--- a/feature-account-api/src/main/res/layout/bottom_sheet_external_actions.xml
+++ b/feature-account-api/src/main/res/layout/bottom_sheet_external_actions.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="4dp">
+    android:paddingBottom="4dp"
+    tools:background="@color/bottom_sheet_background">
 
     <View
         style="@style/Widget.Nova.Puller"
@@ -35,6 +36,7 @@
         android:layout_marginBottom="8dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
+        android:textColor="@color/text_secondary"
         tools:text="P15cfSaBcTxNr8rV59cbhdMNCRagFr3GE6B3zZRsCp4QHHKPu" />
 
 </LinearLayout>
