--- a/feature-governance-impl/src/main/res/layout/view_voters.xml
+++ b/feature-governance-impl/src/main/res/layout/view_voters.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:background="@color/green" />
+        tools:background="@color/text_positive" />
 
     <TextView
         android:id="@+id/votersViewVoteType"
