--- a/feature-wallet-api/src/main/res/layout/view_primary_amount.xml
+++ b/feature-wallet-api/src/main/res/layout/view_primary_amount.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:includeFontPadding="false"
+        android:textColor="@color/text_primary"
         tools:text="−4.508614 KSM" />
 
     <TextView
