--- a/feature-governance-impl/src/main/res/layout/item_referenda_group.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referenda_group.xml
@@ -16,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:includeFontPadding="false"
+        android:textColor="@color/text_primary"
         tools:text="Active" />
 
     <TextView
@@ -29,9 +30,9 @@
         android:gravity="center_vertical"
         android:includeFontPadding="false"
         android:minHeight="22dp"
-        android:textColor="@color/white_80"
         android:paddingHorizontal="8dp"
         android:paddingVertical="2dp"
+        android:textColor="@color/chip_text"
         tools:text="13" />
 
 </LinearLayout>
