--- a/feature-wallet-api/src/main/res/layout/view_asset_selector.xml
+++ b/feature-wallet-api/src/main/res/layout/view_asset_selector.xml
@@ -19,6 +19,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/icon_primary"
         tools:src="@drawable/ic_token_dot" />
 
     <LinearLayout
@@ -62,5 +63,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/white_48" />
+        app:tint="@color/icon_secondary" />
 </merge>
