--- a/feature-assets/src/main/res/layout/view_go_to_nfts.xml
+++ b/feature-assets/src/main/res/layout/view_go_to_nfts.xml
@@ -43,7 +43,7 @@
         <View
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="@drawable/bg_shimmering_light" />
+            android:background="@drawable/bg_shimmering" />
     </com.facebook.shimmer.ShimmerFrameLayout>
 
     <ImageView
