--- a/feature-crowdloan-impl/src/main/res/layout/item_crowdloan_header.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/item_crowdloan_header.xml
@@ -155,7 +155,7 @@
             android:layout_width="88dp"
             android:layout_height="12dp"
             android:layout_marginTop="26dp"
-            android:background="@drawable/bg_shimmering_light"
+            android:background="@drawable/bg_shimmering"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -165,7 +165,7 @@
             android:layout_width="120dp"
             android:layout_height="22dp"
             android:layout_marginTop="12dp"
-            android:background="@drawable/bg_shimmering_light"
+            android:background="@drawable/bg_shimmering"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/crowdloanShimmeringFirst" />
@@ -176,7 +176,7 @@
             android:layout_height="12dp"
             android:layout_marginTop="14dp"
             android:layout_marginBottom="25dp"
-            android:background="@drawable/bg_shimmering_light"
+            android:background="@drawable/bg_shimmering"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
