--- a/feature-governance-impl/src/main/res/layout/item_referenda_shimmering.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referenda_shimmering.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="30dp"
     android:layout_marginHorizontal="16dp"
+    android:layout_marginTop="30dp"
+    android:orientation="vertical"
     android:paddingBottom="12dp">
 
     <com.facebook.shimmer.ShimmerFrameLayout
@@ -13,7 +13,7 @@
         android:layout_width="88dp"
         android:layout_height="14dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/bg_shimmering_light" />
+        android:background="@drawable/bg_shimmering" />
 
     <include layout="@layout/item_referendum_shimmering" />
 
