--- a/feature-governance-impl/src/main/res/layout/view_chip.xml
+++ b/feature-governance-impl/src/main/res/layout/view_chip.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal"
     android:paddingStart="6dp"
     android:paddingEnd="8dp"
-    tools:background="@color/divider"
+    tools:background="@color/chips_background"
     tools:parentTag="android.widget.LinearLayout">
 
     <ImageView
@@ -18,7 +18,7 @@
         android:layout_marginVertical="3dp"
         android:layout_marginEnd="6dp"
         android:gravity="center_vertical"
-        app:tint="@color/text_secondary"
+        app:tint="@color/icon_secondary"
         tools:src="@drawable/ic_info_16" />
 
     <TextView
@@ -31,7 +31,7 @@
         android:layout_marginEnd="8dp"
         android:includeFontPadding="false"
         android:textAllCaps="true"
-        android:textColor="@color/text_secondary"
+        android:textColor="@color/chip_text"
         tools:text="main agenda" />
 
 </merge>
