--- a/feature-governance-impl/src/main/res/values/styles.xml
+++ b/feature-governance-impl/src/main/res/values/styles.xml
@@ -2,11 +2,11 @@
 <resources>
 
     <style name="DefaultVotesView">
-        <item name="noVotesColor">@color/white_16</item>
-        <item name="positiveColor">@color/icon_positive</item>
-        <item name="negativeColor">@color/icon_negative</item>
-        <item name="thresholdColor">@color/text_primary</item>
-        <item name="thresholdShadowColor">@color/black_72</item>
+        <item name="noVotesColor">@color/indicator_inactive</item>
+        <item name="positiveColor">@color/aye_indicator</item>
+        <item name="negativeColor">@color/nay_indicator</item>
+        <item name="thresholdColor">@color/votes_to_pass_indicator</item>
+        <item name="thresholdShadowColor">@color/votes_to_pass_indicator_shadow</item>
         <item name="thresholdWidth">3dp</item>
         <item name="thresholdHeight">11dp</item>
         <item name="thresholdCornerRadius">1.5dp</item>
