--- a/feature-staking-impl/src/main/res/layout/view_staking_info.xml
+++ b/feature-staking-impl/src/main/res/layout/view_staking_info.xml
@@ -18,7 +18,7 @@
             android:layout_width="72dp"
             android:layout_height="12dp"
             android:layout_gravity="center"
-            android:background="@drawable/bg_shimmering_light" />
+            android:background="@drawable/bg_shimmering" />
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
