--- a/feature-governance-impl/src/main/res/layout/view_voters.xml
+++ b/feature-governance-impl/src/main/res/layout/view_voters.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:background="@color/text_positive" />
+        tools:background="@color/aye_indicator" />
 
     <TextView
         android:id="@+id/votersViewVoteType"
@@ -40,7 +40,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center_vertical"
         android:includeFontPadding="false"
-        android:textColor="@color/text_primary"
+        android:textColor="@color/text_secondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/votersViewVotesInfo"
         app:layout_constraintTop_toTopOf="parent"
@@ -53,11 +53,10 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:src="@drawable/ic_info_16"
-        android:textColor="@color/text_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/white_48"
+        app:tint="@color/icon_secondary"
         tools:text="25,354.16 votes" />
 
 </merge>
