--- a/common/src/main/res/drawable/bg_seekbar_active.xml
+++ b/common/src/main/res/drawable/bg_seekbar_active.xml
@@ -7,16 +7,16 @@
   <path
       android:pathData="M5,0L292,0A5,5 0,0 1,297 5L297,5A5,5 0,0 1,292 10L5,10A5,5 0,0 1,0 5L0,5A5,5 0,0 1,5 0z">
     <aapt:attr name="android:fillColor">
-      <gradient 
+      <gradient
           android:startX="311"
           android:startY="5"
           android:endX="0"
           android:endY="5"
           android:type="linear">
-        <item android:offset="0" android:color="#FFFF0087"/>
-        <item android:offset="0.21" android:color="#FFDF00FF"/>
-        <item android:offset="0.5" android:color="#FF2194FF"/>
-        <item android:offset="1" android:color="#FF00FAFF"/>
+        <item android:offset="0" android:color="#FF9900"/>
+        <item android:offset="0.31" android:color="#B6F234"/>
+        <item android:offset="0.63" android:color="#58F8B2"/>
+        <item android:offset="1" android:color="#21A2FF"/>
       </gradient>
     </aapt:attr>
   </path>
