--- a/common/src/main/res/drawable/bg_seekbar_inactive.xml
+++ b/common/src/main/res/drawable/bg_seekbar_inactive.xml
@@ -5,6 +5,5 @@
     android:viewportHeight="10">
   <path
       android:pathData="M5,0L306,0A5,5 0,0 1,311 5L311,5A5,5 0,0 1,306 10L5,10A5,5 0,0 1,0 5L0,5A5,5 0,0 1,5 0z"
-      android:fillColor="#ffffff"
-      android:fillAlpha="0.16"/>
+      android:fillColor="@color/voting_slider_background"/>
 </vector>
