--- a/common/src/main/res/drawable/bg_seekbar_thumb.xml
+++ b/common/src/main/res/drawable/bg_seekbar_thumb.xml
@@ -3,9 +3,9 @@
     android:height="28dp"
     android:viewportWidth="28"
     android:viewportHeight="28">
-  <path
-      android:pathData="M14,14m-9,0a9,9 0,1 1,18 0a9,9 0,1 1,-18 0"
-      android:strokeWidth="10"
-      android:fillColor="#2D2D30"
-      android:strokeColor="#ffffff"/>
+    <path
+        android:fillColor="@color/voting_slider_indicator_active"
+        android:pathData="M14,14m-9,0a9,9 0,1 1,18 0a9,9 0,1 1,-18 0"
+        android:strokeWidth="10"
+        android:strokeColor="@color/voting_slider_knob_icon" />
 </vector>
