--- a/feature-governance-impl/src/main/res/layout/fragment_setup_vote_referendum.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_setup_vote_referendum.xml
@@ -33,6 +33,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
+                android:textColor="@color/text_primary"
                 tools:text="Vote for Referendum #557" />
 
             <io.novafoundation.nova.feature_wallet_api.presentation.view.amount.ChooseAmountView
