--- a/feature-governance-impl/src/main/res/layout/view_amount_changes.xml
+++ b/feature-governance-impl/src/main/res/layout/view_amount_changes.xml
@@ -13,7 +13,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/valueChangesTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/valueChangesTitle"
-        app:tint="@color/white_48"
+        app:tint="@color/icon_secondary"
         tools:src="@drawable/ic_time_16" />
 
     <TextView
@@ -56,8 +56,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/valueChangesTo"
         app:layout_constraintEnd_toStartOf="@+id/valueChangesTo"
         app:layout_constraintTop_toTopOf="@+id/valueChangesTo"
-        app:tint="@color/white_48" />
-
+        app:tint="@color/icon_secondary" />
 
     <TextView
         android:id="@+id/valueChangesTo"
@@ -80,13 +79,13 @@
         android:gravity="center_vertical"
         android:includeFontPadding="false"
         android:textColor="@color/text_secondary"
-        app:drawableTint="?attr/colorAccent"
+        app:drawableTint="@color/icon_accent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/valueChangesTo"
         tools:drawableStart="@drawable/ic_double_chevron_up"
         tools:text="1 day"
-        tools:textColor="?attr/colorAccent" />
+        tools:textColor="@color/button_text_accent" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/valueBarrier"
@@ -94,6 +93,5 @@
         android:layout_height="wrap_content"
         app:barrierDirection="left"
         app:constraint_referenced_ids="valueChangesFrom, valueChangesDifference" />
-
 
 </merge>
