--- a/feature-governance-impl/src/main/res/layout/view_vote_power.xml
+++ b/feature-governance-impl/src/main/res/layout/view_vote_power.xml
@@ -4,18 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:parentTag="android.widget.LinearLayout"
+    tools:background="@color/secondary_screen_background"
     tools:padding="16dp"
-    tools:background="@color/secondary_screen_background">
+    tools:parentTag="android.widget.LinearLayout">
 
     <TextView
+        style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/referendum_vote_select_conviction_title" />
+        android:text="@string/referendum_vote_select_conviction_title"
+        android:textColor="@color/text_secondary" />
 
     <io.novafoundation.nova.common.view.input.seekbar.Seekbar
-        android:layout_width="match_parent"
         android:id="@+id/votePowerSelector"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp" />
 
