--- a/feature-wallet-api/src/main/res/layout/item_asset_selector.xml
+++ b/feature-wallet-api/src/main/res/layout/item_asset_selector.xml
@@ -15,7 +15,8 @@
         android:src="@drawable/ic_checkmark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/icon_primary" />
 
     <ImageView
         android:id="@+id/itemAssetSelectorIcon"
@@ -27,6 +28,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/itemAssetSelectorCheckmark"
         app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/icon_primary"
         tools:src="@drawable/ic_token_dot" />
 
     <TextView
@@ -36,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="7dp"
+        android:textColor="@color/text_primary"
         app:layout_constraintStart_toEndOf="@id/itemAssetSelectorIcon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Polkadot" />
@@ -52,15 +55,5 @@
         app:layout_constraintStart_toStartOf="@id/itemAssetSelectorTokenName"
         app:layout_constraintTop_toBottomOf="@id/itemAssetSelectorTokenName"
         tools:text="10 DOT" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@color/divider"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
