--- a/feature-crowdloan-impl/src/main/res/layout/item_crowdloan_header.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/item_crowdloan_header.xml
@@ -34,6 +34,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/crowdloan_about"
+            android:textColor="@color/text_primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +105,7 @@
             android:src="@drawable/ic_chevron_right"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/white_48" />
+            app:tint="@color/icon_secondary" />
 
         <TextView
             android:id="@+id/crowdloanTotalContributedValue"
