--- a/feature-crowdloan-impl/src/main/res/layout/item_crowdloan.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/item_crowdloan.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginBottom="8dp"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
     android:background="@drawable/bg_primary_list_item"
     tools:background="@color/block_background">
 
@@ -34,7 +34,6 @@
         app:layout_constraintTop_toTopOf="@+id/itemCrowdloanIcon"
         tools:text="Karura (KAR)" />
 
-
     <ImageView
         android:id="@+id/itemCrowdloanArrow"
         android:layout_width="wrap_content"
@@ -44,7 +43,7 @@
         android:src="@drawable/ic_chevron_right"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/text_secondary" />
+        app:tint="@color/icon_secondary" />
 
     <TextView
         android:id="@+id/itemCrowdloanParaDescription"
@@ -52,7 +51,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:textColor="@color/black2"
+        android:textColor="@color/text_secondary"
         app:layout_constraintEnd_toStartOf="@+id/itemCrowdloanArrow"
         app:layout_constraintStart_toStartOf="@+id/itemCrowdloanParaName"
         app:layout_constraintTop_toBottomOf="@+id/itemCrowdloanParaName"
@@ -66,7 +65,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:textColor="@color/text_primary"
+        android:textColor="@color/text_secondary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/itemCrowdloanParaDescription"
@@ -91,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="14dp"
-        android:textColor="?attr/colorAccent"
+        android:textColor="@color/progress_bar_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/itemCrowdloanParaRaisedProgress"
         app:layout_constraintTop_toBottomOf="@id/itemCrowdloanParaRaisedProgress"
