--- a/feature-crowdloan-impl/src/main/res/layout/item_crowdloans_placeholder.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/item_crowdloans_placeholder.xml
@@ -22,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
+            android:textColor="@color/text_primary"
             android:text="@string/crowdloan_active_section" />
 
         <TextView
