--- a/common/src/main/res/drawable/bg_icon_big_dashed.xml
+++ b/common/src/main/res/drawable/bg_icon_big_dashed.xml
@@ -6,7 +6,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/container_border"
+        android:color="@color/no_key_container_border"
         android:dashWidth="4dp"
         android:dashGap="4dp" />
 </shape>
