--- a/feature-account-impl/src/main/res/drawable/bg_confirm_mnemonic_word_disabled.xml
+++ b/feature-account-impl/src/main/res/drawable/bg_confirm_mnemonic_word_disabled.xml
@@ -6,7 +6,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/container_border"
+        android:color="@color/mnemonic_border_inactive"
         android:dashWidth="8dp"
         android:dashGap="4dp" />
 </shape>
