--- a/feature-account-impl/src/main/res/layout/fragment_export_json_confirm.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_export_json_confirm.xml
@@ -22,6 +22,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:textColor="@color/text_primary"
         android:text="@string/account_export_json_title" />
 
     <io.novafoundation.nova.common.view.LabeledTextView
