--- a/feature-account-impl/src/main/res/layout/fragment_export_json_password.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_export_json_password.xml
@@ -21,6 +21,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:textColor="@color/text_primary"
         android:text="@string/account_export_json_password_title" />
 
     <TextView
@@ -43,7 +44,7 @@
         android:hint="@string/export_json_password_new"
         app:passwordToggleEnabled="true"
         android:id="@+id/exportJsonPasswordNewField"
-        app:passwordToggleTint="@color/text_primary" />
+        app:passwordToggleTint="@color/icon_primary" />
 
     <io.novafoundation.nova.common.view.InputField
         style="@style/Widget.Nova.Input.Primary.External"
@@ -55,7 +56,7 @@
         android:layout_marginEnd="16dp"
         android:hint="@string/export_json_password_confirm"
         app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/text_primary" />
+        app:passwordToggleTint="@color/icon_primary" />
 
     <Space
         android:layout_width="match_parent"
