--- a/feature-account-impl/src/main/res/layout/fragment_languages.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_languages.xml
@@ -12,6 +12,7 @@
         android:id="@+id/novaToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:dividerVisible="false"
         app:titleText="@string/language_title" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -19,6 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_node" />
+        tools:listitem="@layout/item_language" />
 
 </LinearLayout>
