--- a/feature-crowdloan-impl/src/main/res/layout/fragment_contribute.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_contribute.xml
@@ -12,6 +12,7 @@
         android:id="@+id/crowdloanContributeToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:dividerVisible="false"
         tools:titleText="Karura (KAR)" />
 
     <ScrollView
@@ -20,18 +21,18 @@
         android:layout_weight="1">
 
         <LinearLayout
+            android:id="@+id/crowdloanContributeScrollableContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/crowdloanContributeScrollableContent"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/crowdloanContributeTitle"
                 style="@style/TextAppearance.NovaFoundation.Header4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
-                android:id="@+id/crowdloanContributeTitle"
                 android:text="@string/crowdloan_contribute_title" />
 
             <io.novafoundation.nova.common.view.AmountView
@@ -55,7 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_info_16"
-                    app:tint="@color/black2" />
+                    app:tint="@color/icon_secondary" />
 
                 <TextView
                     android:id="@+id/crowdloanContributeUnlockHint"
@@ -63,6 +64,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:includeFontPadding="false"
+                    android:textColor="@color/text_secondary"
                     tools:text="Your KSM tokens will be returned after the leasing period." />
             </LinearLayout>
 
@@ -92,20 +94,21 @@
                 app:title="@string/crowdloan_leasing_period" />
 
             <LinearLayout
+                android:id="@+id/crowdloanContributeBonus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_primary_list_item"
                 android:orientation="horizontal"
                 android:paddingStart="16dp"
                 android:paddingTop="13dp"
-                android:background="@drawable/bg_primary_list_item"
-                android:id="@+id/crowdloanContributeBonus"
                 android:paddingEnd="16dp"
                 android:paddingBottom="13dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_nova" />
+                    android:src="@drawable/ic_nova"
+                    app:tint="@color/icon_primary" />
 
                 <TextView
                     style="@style/TextAppearance.NovaFoundation.Body1"
@@ -116,17 +119,18 @@
                     android:text="@string/common_bonus" />
 
                 <TextView
+                    android:id="@+id/crowdloanContributeBonusReward"
+                    style="@style/TextAppearance.NovaFoundation.Body2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/colorAccent"
-                    style="@style/TextAppearance.NovaFoundation.Body2"
-                    android:id="@+id/crowdloanContributeBonusReward"
-                    tools:text="@string/crowdloan_bonus_action" />
+                    android:textColor="@color/button_text_accent"
+                    tools:text="Text" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_chevron_right" />
+                    android:src="@drawable/ic_chevron_right"
+                    app:tint="@color/icon_secondary" />
             </LinearLayout>
 
             <View
@@ -137,12 +141,12 @@
                 android:background="@color/divider" />
 
             <io.novafoundation.nova.common.view.GoNextView
-                android:layout_width="match_parent"
-                tools:icon="?attr/colorAccent"
-                tools:text="Learn more about crowdloan"
-                app:actionIcon="@drawable/ic_chevron_right"
                 android:id="@+id/crowdloanContributeLearnMore"
-                android:layout_height="wrap_content" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:actionIcon="@drawable/ic_chevron_right"
+                tools:icon="?attr/colorAccent"
+                tools:text="Learn more about crowdloan" />
         </LinearLayout>
     </ScrollView>
 
