--- a/feature-crowdloan-impl/src/main/res/layout/fragment_contribute_confirm.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_contribute_confirm.xml
@@ -12,6 +12,7 @@
         android:id="@+id/confirmContributeToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:dividerVisible="false"
         app:titleText="@string/common_confirm" />
 
     <ScrollView
@@ -72,6 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
+                app:dividerVisible="false"
                 app:title="@string/common_bonus" />
         </LinearLayout>
     </ScrollView>
@@ -79,7 +81,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black4"
         android:orientation="vertical">
 
         <io.novafoundation.nova.feature_wallet_api.presentation.view.FeeView
@@ -87,6 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            app:dividerVisible="false"
             android:layout_marginEnd="16dp" />
 
         <io.novafoundation.nova.common.view.PrimaryButton
