--- a/feature-ledger-impl/src/main/res/layout/fragment_import_ledger_select_address.xml
+++ b/feature-ledger-impl/src/main/res/layout/fragment_import_ledger_select_address.xml
@@ -20,6 +20,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:textColor="@color/icon_primary"
         android:text="@string/ledher_import_select_address_title" />
 
     <io.novafoundation.nova.feature_account_api.view.ChainChipView
