--- a/feature-ledger-impl/src/main/res/layout/fragment_ledger_message.xml
+++ b/feature-ledger-impl/src/main/res/layout/fragment_ledger_message.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:paddingBottom="16dp"
-    tools:background="@color/bg_bottom_sheet">
+    tools:background="@color/bottom_sheet_background">
 
     <View
         style="@style/Widget.Nova.Puller"
@@ -27,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:textColor="@color/text_primary"
         tools:text="Verify Address" />
 
     <TextView
@@ -51,6 +52,7 @@
         android:layout_marginEnd="16dp"
         android:gravity="center"
         android:visibility="gone"
+        android:textColor="@color/text_primary"
         tools:text="Transaction is valid for 05:39" />
 
     <LinearLayout
