--- a/feature-ledger-impl/src/main/res/layout/item_ledger.xml
+++ b/feature-ledger-impl/src/main/res/layout/item_ledger.xml
@@ -8,5 +8,5 @@
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="16dp"
     app:actionIcon="@drawable/ic_chevron_right"
-    app:actionTint="@color/text_secondary"
+    app:actionTint="@color/icon_secondary"
     app:dividerVisible="false" />
