--- a/feature-assets/src/main/res/layout/item_asset.xml
+++ b/feature-assets/src/main/res/layout/item_asset.xml
@@ -11,15 +11,12 @@
 
     <ImageView
         android:id="@+id/itemAssetImage"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        style="@style/Widget.Nova.AssetIcon.Dark"
         android:layout_marginStart="12dp"
-        android:background="@drawable/bg_icon_round_black"
-        android:padding="6dp"
         app:layout_constraintBottom_toBottomOf="@+id/itemAssetRate"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/itemAssetToken"
-        tools:src="@drawable/ic_token_ksm" />
+        tools:src="@drawable/ic_nova" />
 
     <TextView
         android:id="@+id/itemAssetToken"
