--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -276,6 +276,7 @@
     <style name="Widget.Nova.Puller" parent="">
         <item name="android:layout_height">3dp</item>
         <item name="android:layout_width">35dp</item>
+        <item name="android:layout_marginTop">4dp</item>
         <item name="android:background">@drawable/bg_puller</item>
     </style>
 
