--- a/feature-assets/src/main/res/layout/fragment_manage_chain_tokens.xml
+++ b/feature-assets/src/main/res/layout/fragment_manage_chain_tokens.xml
@@ -9,14 +9,14 @@
 
     <View
         android:id="@+id/view"
-        android:layout_gravity="center_horizontal"
-        style="@style/Widget.Nova.Puller" />
+        style="@style/Widget.Nova.Puller"
+        android:layout_gravity="center_horizontal" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
-        android:layout_height="wrap_content">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/manageChainTokenIcon"
@@ -27,9 +27,9 @@
             tools:src="@drawable/ic_nova" />
 
         <LinearLayout
-            android:layout_marginStart="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
             android:orientation="vertical">
 
             <TextView
@@ -54,9 +54,9 @@
         android:id="@+id/manageChainTokenChains"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
+        android:layout_weight="1"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_manage_chain_token" />
 </LinearLayout>
