--- a/feature-assets/src/main/res/layout/fragment_manage_chain_tokens.xml
+++ b/feature-assets/src/main/res/layout/fragment_manage_chain_tokens.xml
@@ -55,7 +55,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
+        android:paddingBottom="4dp"
+        android:clipToPadding="false"
         android:layout_weight="1"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_manage_chain_token" />
